# ansible-role-tripleo-overcloud-deployment-prep

./: .gitignore  setup.cfg
defaults/: main.yml
handlers/: main.yml
tasks/: main.yml
templates/: network-environment.yaml.j2  prep-overcloud-deployment.sh.j2
tests/: test.yml
vars/: main.yml
