[metadata]
name = ansible-role-tripleo-overcloud-deployment-prep
summary = ansible-role-tripleo-overcloud-deployment-prep - A ansible role for deploying a tripleo overcloud
description-file =
    README.md
author = RDO-CI Team
author-email = rlandy@redhat.com
home-page = https://github.com/rlandy/ansible-role-tripleo-overcloud-deployment-prep
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    usr/local/share/ansible/roles/defaults = defaults/*
    usr/local/share/ansible/roles/handlers = handlers/*
    usr/local/share/ansible/roles/meta = meta/*
    usr/local/share/ansibles/roles/tasks = tasks/*
    usr/local/share/ansible/roles/templates = templates/*
    usr/local/share/ansible/roles/files= files/*
    usr/local/share/ansible/roles/tests = tests/*
    usr/local/share/ansible/roles/vars = vars/*
    playbooks = playbooks/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
